--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <li><a class="header-address-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
+    <button type="button" class="open-menu-btn">
+        <svg width="24" height="24">
+            <use href="./images/icon mobile.svg#icon-Group"></use>
+        </svg>
+    </button>
     </div>
     </header>
 
