--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
         </div>
     </section>
     <section class="section-team">
-        <div class="container">
+        <div class="container team-continer">
         <h2 class="section-team-heading">Our Team</h2>
         <ul class="section-team-list">
             <li class="section-team-item">
-                <img src="./images/mark.jpg" alt="Mark" width="264" height="260"/>
+                <img src="./images/mark.jpg" srcset="./images/mark-2x.jpg mark-2x.jpg" alt="Mark" width="264" height="260"/>
                 <div class="team-name">
                 <h3 class="section-team-name">Mark Guerrero</h3>
                 <p class="section-team-text">Product Designer</p>
@@ -134,7 +134,7 @@
             </li>
          
             <li class="section-team-item">
-                <img src="./images/tom.jpg" alt="Tom" width="264" height="260"/>
+                <img src="./images/tom.jpg" srcset="./images/tom-2x.jpg tom-2x.jpg" alt="Tom" width="264" height="260"/>
                 <div class="team-name">
                 <h3 class="section-team-name">Tom Ford</h3>
                 <p class="section-team-text">Frontend Developer</p>
@@ -172,7 +172,7 @@
                 </div>
             </li>
             <li class="section-team-item">
-                <img src="./images/camila.jpg" alt="Camila" width="264" height="260"/>
+                <img src="./images/camila.jpg" srcset="./images/camila-2x.jpg camila-2x.jpg" alt="Camila" width="264" height="260"/>
                 <div class="team-name">
                 <h3 class="section-team-name">Camila Garcia</h3>
                 <p class="section-team-text">Marketing</p>
@@ -210,7 +210,7 @@
                 </div>
             </li>
             <li class="section-team-item">
-                <img src="./images/daniel.jpg"  alt="Daniel" width="264" height="260"/>
+                <img src="./images/daniel.jpg" srcset="./images/daniel-2x.jpg daniel-2x.jpg"  alt="Daniel" width="264" height="260"/>
                 <div class="team-name">
                 <h3 class="section-team-name">Daniel Wilson</h3>
                 <p class="section-team-text">UI Designer</p>
@@ -256,7 +256,15 @@
         <ul class="section-portfolio-list">
             <li class="section-portfolio-item">
                 <div class="section-cadr">
-                    <img src="./images/bankingapp.jpg" alt="Banking" width="360" height="300" />
+                    <picture>
+                        <source media="(min-width:1158px)"
+                            srcset="./images/bankingapp.jpg bankingapp.jpg, ./images/bankingapp-2x.jpg">
+                            <source media="(min-width:768px)"
+                                    srcset="./images/port-tab1 port-tab1, ./images/port-tab1-2x port-tab1-2x">
+                                <source media="(min-width: 320px)"
+                                    srcset="./images/port-mobile1 port-mobile1, ./images/port-mobile1-2x port-mobile1-2x">
+                    <img class="portfolio-picture" src="./images/bankingapp.jpg" srcset="./images/bankingapp-2x.jpg bankingapp-2x.jpg" alt="Banking" width="360" height="300" />
+                    </picture>
                     <p class="section-portfolio-info">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="portfolio-name">
@@ -266,7 +274,15 @@
             </li>
             <li class="section-portfolio-item">
                 <div class="section-cadr">
-                    <img src="./images/cashlesspayment.jpg" alt="Cashless" width="360" height="300" />
+                    <picture>
+                        <source media="(min-width:1158px)"
+                            srcset="./images/cashlesspayment.jpg, ./images/cashlesspayment-2x.jpg cashlesspayment-2x.jpg">
+                        <source media="(min-width:768px)"
+                            srcset="./images/port-tab2 port-tab2, ./images/port-tab2-2x port-tab2-2x">
+                        <source media="(min-width: 320px)"
+                            srcset="./images/port-mobile2.jpg port-mobile-2, ./images/port-mobile2-2x port-mobile2-2x">
+                    <img class="portfolio-picture" src="./images/cashlesspayment.jpg" srcset="./images/cashlesspayment-2x.jpg cashlesspayment-2x" alt="Cashless" width="360" height="300" />
+                    </picture>
                     <p class="section-portfolio-info">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="portfolio-name">
@@ -276,7 +292,15 @@
             </li>
             <li class="section-portfolio-item">
                 <div class="section-cadr">
-                    <img src="./images/meditationapp.jpg" alt="Meditation" width="360" height="300" />
+                    <picture>
+                        <source media="(min-width:1158px)"
+                            srcset="./images/meditationapp.jpg meditationapp.jpg, ./images/meditationapp.jpg-2x meditationapp.jpg-2x">
+                        <source media="(min-width:768px)"
+                            srcset="./images/port-tab3 port-tab3, ./images/port-tab3-2x port-tab3-2x">
+                        <source media="(min-width: 320px)"
+                            srcset="./images/port-mobile3.jpg port-mobile3, ./images/port-mobile3-2x port-mobile3-2x">
+                    <img class="portfolio-picture" src="./images/meditationapp.jpg" srcset="./images/meditationapp-2x.jpg meditationapp-2x" alt="Meditation" width="360" height="300" />
+                    </picture>
                     <p class="section-portfolio-info">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="portfolio-name">
@@ -286,7 +310,15 @@
             </li>
             <li class="section-portfolio-item">
                 <div class="section-cadr">
-                    <img src="./images/taxiservice.jpg" alt="Taxi" width="360" height="300" />
+                    <picture>
+                        <source media="(min-width:1158px)"
+                            srcset="./images/taxiservice.jpg taxiservice.jpg, ./images/taxiservice-2x taxiservice-2x">
+                        <source media="(min-width:768px)"
+                            srcset="./images/port-tab4 port-tab4, ./images/port-tab4-2x port-tab4-2x">
+                        <source media="(min-width: 320px)"
+                            srcset="./images/port-mobile4.jpg port-mobile4, ./images/port-mobile4-2x port4-mobile-2x">
+                    <img class="portfolio-picture" src="./images/taxiservice.jpg" srcset="./images/taxiservice-2x.jpg taxiservice-2x" alt="Taxi" width="360" height="300" />
+                    </picture>
                     <p class="section-portfolio-info">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="portfolio-name">
@@ -296,7 +328,15 @@
             </li>
             <li class="section-portfolio-item">
                 <div class="section-cadr">
-                    <img src="./images/screenillustrations.jpg" alt="Screen" width="360" height="300" />
+                    <picture>
+                        <source media="(min-width:1158px)"
+                            srcset="./images/screenillustrations.jpg screenillustrations.jpg, ./images/screenillustrations-2x screenillustrations-2x">
+                        <source media="(min-width:768px)"
+                            srcset="./images/port-tab5 port-tab5, ./images/port-tab5-2x port-tab5-2x">
+                        <source media="(min-width: 320px)"
+                            srcset="./images/port-mobile5.jpg port-mobile5, ./images/port-mobile5-2x port-mobile5-2x">
+                    <img class="portfolio-picture" src="./images/screenillustrations.jpg" srcset="./images/screenillustrations-2x.jpg screenillustrations-2x" alt="Screen" width="360" height="300" />
+                    </picture>
                     <p class="section-portfolio-info">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="portfolio-name">
@@ -306,7 +346,15 @@
             </li>
             <li class="section-portfolio-item">
                 <div class="section-cadr">
-                    <img src="./images/onlinecourses.jpg" alt="Courses" width="360" height="300" />
+                    <picture>
+                        <source media="(min-width:1158px)"
+                            srcset="./images/onlinecourses.jpg onlinecourses.jpg, ./images/onlinecourses-2x onlinecourses-2x">
+                        <source media="(min-width:768px)"
+                            srcset="./images/port-tab6 port-tab6, ./images/port-tab6-2x port-tab6-2x">
+                        <source media="(min-width: 320px)"
+                            srcset="./images/port-mobile6.jpg port-mobile6, ./images/port-mobile6-2x port-mobile6-2x">
+                    <img class="portfolio-picture" src="./images/onlinecourses.jpg" srcset="./images/onlinecourses-2x.jpg onlinecourses-2x" alt="Courses" width="360" height="300" />
+                    </picture>
                     <p class="section-portfolio-info">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                     <div class="portfolio-name">
@@ -438,5 +486,59 @@
         </div>
     </div>
     
+
+    <div class="backdrop is-open">
+        <div class="modal">
+            <button type="button" class="modal-close-btn">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/close-black.svg#icon-close-black"></use>
+                </svg>
+            </button>
+            <ul class="menu-list">
+                <li class="menu-item"><a href="./index.html" class="menu-link current">Studio</a></li>
+                <li class="menu-item"><a href="" class="menu-link">Portfolio</a></li>
+                <li class="menu-item"><a href="" class="menu-link">Contacts</a></li>
+            </ul>
+            <address class="menu-address">
+                <ul class="menu-address-list">
+                    <li class="menu-address-item"><a class="menu-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="menu-address-item"><a class="menu-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+                <ul class="icon-list menu-icon-list">
+                    <li class="icon-item">
+                        <a href="" class="icon-link">
+                            <svg class="icon-icon" width="40" height="40">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-item">
+                        <a href="" class="icon-link">
+                            <svg class="icon-icon" width="40" height="40">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-item">
+                        <a href="" class="icon-link">
+                            <svg class="icon-icon" width="40" height="40">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-item">
+                        <a href="" class="icon-link">
+                            <svg class="icon-icon" width="40" height="40">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
