--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@
             </ul>
             <address class="menu-address">
                 <ul class="menu-address-list">
+                    <li class="menu-address-item"><a class="menu-address-link" href="tel:+110001111111">+11 (000) 111-11-11"</a></li>
                     <li class="menu-address-item"><a class="menu-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="menu-address-item"><a class="menu-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
                 <ul class="icon-list menu-icon-list">
                     <li class="icon-item">
